<?xml version="1.0"?>
<package format="3">
  <name>effort_controllers</name>
  <version>0.4.0</version>
  <description>Generic controller for forwarding commands.</description>
  <author email="bence.magyar.robotics@gmail.com">Bence Magyar</author>
  <author email="jordan.palacios@pal-robotics.com">Jordan Palacios</author>
  <maintainer email="svastits1@gmail.com">Aron Svastits</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>control_toolbox</depend>
  <depend>forward_command_controller</depend>
  <depend>rclcpp</depend>

  <build_depend>pluginlib</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
