<?xml version="1.0"?>
<package format="2">
  <name>kuka_controllers</name>
  <version>0.9.0</version>
  <description>ROS2 Controllers for KUKA robots</description>
  <maintainer email="svastits1@gmail.com">Aron Svastits</maintainer>
  <license>Apache-2.0</license>

  <url type="bugtracker">https://github.com/kroshu/kuka_controllers/issues</url>
  <url type="repository">https://github.com/kroshu/kuka_controllers</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>control_mode_handler</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>fri_configuration_controller</exec_depend>
  <exec_depend>fri_state_broadcaster</exec_depend>
  <exec_depend>joint_group_impedance_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
